filem/static/filem/css/base.css
* { box-sizing: border-box; }

html, body {
    margin: 0;
    padding: 0;
    height: 100vh;
    font-family: sans-serif;
}

/*
 * Layout
 */

 /* Vertical stack: header / body / footer */
body {
  display: flex;
  flex-direction: column;
}

body > header { flex: 0 0 2em; }
body > footer { flex: 0 0 2em; }
main { flex: 1 1 auto; }

/* Horizontal stack: col1 / col2 */
main { display: flex; }
#col1 { flex: 0 0 300px; }
#col2 { flex: 1 1 auto; }

/* Vertical stack: tree */
#col1 {
    display: flex;
    flex-direction: column;
}

#tree { flex: 1 1 auto; }

/* Files takes all the space */
#files {
    flex: 1 1 100%;
    overflow: auto;
}

/*
 * Styling
 */

 .selected {
   background-color: linen;
 }

body {
  background-color: grey;
}

main {
  background-color: white;
}

body > header, body > footer {
  background-color: ghostwhite;
  line-height: 2em;
}

body > header {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
  border-bottom: solid grey 1px;
}

body > footer {
  border-top: solid grey 1px;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

#col1, #col2 {
    padding: 5px;
}

#col2 {
    border-left: solid grey 1px;
}

#title {
    text-align: center;
    height: 2em;
    font-size: larger;
}

#files p {
    font-size: small;
    margin: 0;
}

#files > ul {
    margin: 0;
    padding: 0;
    height: 100%;
    overflow: auto;
    display: flex;
    flex-flow: row wrap;
    align-items: stretch;
    align-content: flex-start;
}

#files > ul li {
    list-style: none;
    text-align: center;
    flex: 0 0 120px;
    padding: 5px;
    overflow: hidden;
}

#files li {
  border-radius: 5px;
}

#files img {
  border-radius: 5px;
  height: 64px;
  width: 64px;
}

#tree {
    overflow: auto;
}

#tree ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

#tree li {
    font-weight: normal;
}

#tree li > ul {
    display: none;
    padding-left: 0.5em;
}

#tree li.open > ul {
    display: block;
}

#tree li.current {
    font-weight: bold;
}

#tree span {
    -webkit-user-select: none;
    display: block;
    padding: 5px;
}

#tree span:hover {
    background-color: #eee;
}

#tree li span:before {
    content: '\25BA';
}

#tree li.open > span:before {
    content: '\25BC';
}

.menu {
    display: none;
}

.menu {
    position: absolute;
    border-radius: 5px;
    background-color: #eee;
}

.menu ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.menu li {
    padding: 5px;
}

.menu li:hover {
    background-color: #ccf;
}

.lb-image {
    text-align: center;
}

.lb-image img {
    max-width: 100%;
    max-height: 100%;
}

/*
 * Dropzone
 */
#db_target {
    width: 1px;
    height: 1px;
}

